--- a/templates/base.html
+++ b/templates/base.html
@@ -160,6 +160,9 @@
               <a class="nav-link" href="/emotion_filter">Emotion Filter</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/emotion_new">Emotion New</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/calendar">Calendar</a>
             </li>
             <li class="nav-item">
